--- a/keypoint_classification_EN.ipynb
+++ b/keypoint_classification_EN.ipynb
@@ -333,13 +333,7 @@
       "23/31 [=====================>........] - ETA: 0s - loss: 0.8259 - accuracy: 0.6702\n",
       "Epoch 27: saving model to model/keypoint_classifier\\keypoint_classifier.hdf5\n",
       "31/31 [==============================] - 0s 4ms/step - loss: 0.8298 - accuracy: 0.6707 - val_loss: 0.4945 - val_accuracy: 0.8916\n",
-      "Epoch 28/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 28/1000\n",
       "24/31 [======================>.......] - ETA: 0s - loss: 0.7954 - accuracy: 0.6829\n",
       "Epoch 28: saving model to model/keypoint_classifier\\keypoint_classifier.hdf5\n",
       "31/31 [==============================] - 0s 4ms/step - loss: 0.8044 - accuracy: 0.6830 - val_loss: 0.4830 - val_accuracy: 0.9069\n",
@@ -561,13 +555,7 @@
       "29/31 [===========================>..] - ETA: 0s - loss: 0.6376 - accuracy: 0.7600\n",
       "Epoch 81: saving model to model/keypoint_classifier\\keypoint_classifier.hdf5\n",
       "31/31 [==============================] - 0s 5ms/step - loss: 0.6379 - accuracy: 0.7593 - val_loss: 0.2896 - val_accuracy: 0.9351\n",
-      "Epoch 82/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 82/1000\n",
       "30/31 [============================>.] - ETA: 0s - loss: 0.6287 - accuracy: 0.7695\n",
       "Epoch 82: saving model to model/keypoint_classifier\\keypoint_classifier.hdf5\n",
       "31/31 [==============================] - 0s 5ms/step - loss: 0.6285 - accuracy: 0.7695 - val_loss: 0.2921 - val_accuracy: 0.9351\n",
@@ -1381,9 +1369,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "hand",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "hand"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1395,7 +1383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
